force-app/main/default/objects/Registration__c/fields/Special_Events_and_Activities__c.field-meta.xml
<CustomField>
    <fullName>Special_Events_and_Activities__c</fullName>
    <formula>Program__r.X8c_Net_income_or_loss_from_fundraising__c + Program__r.X9c_Net_income_or_loss_from_gaming__c</formula>
    <label>Special Events and Activities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>