force-app/main/default/objects/Registration__c/fields/Subtotal_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Contributions__c</fullName>
    <formula>Program__r.X1e_Government_Grants__c</formula>
    <label>Subtotal Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>