force-app/main/default/objects/Registration__c/fields/Subtotal_Other_Income__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Other_Income__c</fullName>
    <formula>Program__r.X12_1_Total_Revenue__c - Contribution__c</formula>
    <label>Subtotal Other Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>