force-app/main/default/objects/Registration__c/fields/Total_amount_of_funds_solicited_collecte__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_of_funds_solicited_collecte__c</fullName>
    <formula>Program__r.X1h_Total__c</formula>
    <inlineHelpText>Total amount of funds solicited/collected last fiscal year:</inlineHelpText>
    <label>Total amount of funds solicited/collecte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>