force-app/main/default/objects/Registration__c/fields/Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets__c</fullName>
    <formula>Program__r.Total_Assets_End_Of_Year__c</formula>
    <label>Total Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>