force-app/main/default/objects/Registration__c/fields/Total_Assets_End_of_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets_End_of_Year__c</fullName>
    <formula>Program__r.Total_Assets_End_Of_Year__c</formula>
    <label>Total Assets, End of Year:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>