force-app/main/default/objects/Registration__c/fields/Total_Compensations__c.field-meta.xml
<CustomField>
    <fullName>Total_Compensations__c</fullName>
    <formula>Program__r.X1d_Total_Compensation__c</formula>
    <inlineHelpText>Total compensation paid to employees by the charitable organization and all its affiliated organizations</inlineHelpText>
    <label>Total Compensations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>