force-app/main/default/objects/Registration__c/fields/Total_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Total_Contributions__c</fullName>
    <formula>Program__r.X8_Contributions_and_Grants__c</formula>
    <label>Total Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>