force-app/main/default/objects/Registration__c/fields/Total_deductions__c.field-meta.xml
<CustomField>
    <fullName>Total_deductions__c</fullName>
    <formula>Program__r.X1a_Federated_campaigns__c +  Government_Grants__c</formula>
    <label>Total deductions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>