force-app/main/default/objects/Registration__c/fields/Total_dollar_amt_received_contributions__c.field-meta.xml
<CustomField>
    <fullName>Total_dollar_amt_received_contributions__c</fullName>
    <formula>Program__r.X1e_Government_Grants__c</formula>
    <label>Total dollar amt received contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>