force-app/main/default/objects/Registration__c/fields/Total_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense__c</fullName>
    <formula>Program__r.X25_A_Total_Expenses__c</formula>
    <label>Total Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>