force-app/main/default/objects/Registration__c/fields/Total_Expenses_Joint_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_Joint_Costs__c</fullName>
    <formula>Program__r.X26_A_Total_Expenses__c</formula>
    <label>Total Expenses(Joint Costs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>