force-app/main/default/objects/Registration__c/fields/Total_Gross_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Revenue__c</fullName>
    <formula>Program__r.G_Gross_Receipts__c</formula>
    <label>Total Gross Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>