force-app/main/default/objects/Registration__c/fields/Total_Program_Service_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Program_Service_Expenses__c</fullName>
    <formula>Program__r.X25_B_Program_Service_expenses__c</formula>
    <label>Total Program Service Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>