force-app/main/default/objects/Registration__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <formula>Program__r.X12_Total_Revenue__c</formula>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>