force-app/main/default/objects/Registration__c/fields/Total_Revenue_F__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_F__c</fullName>
    <formula>Individual_contributions_gifts_grants__c + All_Other_Revenue__c</formula>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>