force-app/main/default/objects/Registration__c/fields/Total_revenue_from_all_sources__c.field-meta.xml
<CustomField>
    <fullName>Total_revenue_from_all_sources__c</fullName>
    <formula>Program__r.X12_1_Total_Revenue__c</formula>
    <label>Total revenue from all sources</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>