force-app/main/default/objects/Registration__c/fields/URS__c.field-meta.xml
<CustomField>
    <fullName>URS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>URS</label>
    <type>Checkbox</type>
</CustomField>