force-app/main/default/objects/Registration__c/fields/X10_Cost_of_goods__c.field-meta.xml
<CustomField>
    <fullName>X10_Cost_of_goods__c</fullName>
    <formula>Program__r.X10b_Less_Cost_of_goods_sold__c</formula>
    <label>10. Cost of goods:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>