force-app/main/default/objects/Registration__c/fields/X11_Management_and_general_expenses__c.field-meta.xml
<CustomField>
    <fullName>X11_Management_and_general_expenses__c</fullName>
    <formula>Program__r.X25_C_Management_and_general_expenses__c</formula>
    <label>11. Management and general expenses:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>