force-app/main/default/objects/Registration__c/fields/X12_Fund_raising_expenses__c.field-meta.xml
<CustomField>
    <fullName>X12_Fund_raising_expenses__c</fullName>
    <formula>Program__r.X25_D_Fundraising_Expenses_Total__c</formula>
    <label>12. Fund raising expenses:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>