force-app/main/default/objects/Registration__c/fields/X13_Other_expenses__c.field-meta.xml
<CustomField>
    <fullName>X13_Other_expenses__c</fullName>
    <formula>Program__r.X6b_Less_rental_expense__c + Program__r.X9b_Less_direct_expense__c</formula>
    <label>13. Other expenses:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>