force-app/main/default/objects/Registration__c/fields/X14_Cost_of_fundraising_incurred_by_org__c.field-meta.xml
<CustomField>
    <fullName>X14_Cost_of_fundraising_incurred_by_org__c</fullName>
    <formula>Program__r.X25_D_Fundraising_Expenses_Total__c</formula>
    <label>14. Cost of fundraising incurred by org</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>