force-app/main/default/objects/Registration__c/fields/X14_Total_expenses__c.field-meta.xml
<CustomField>
    <fullName>X14_Total_expenses__c</fullName>
    <formula>X8_Total_program_expenses__c + X9_Direct_expenses_from_special_events__c + X10_Cost_of_goods__c + X11_Management_and_general_expenses__c + X12_Fund_raising_expenses__c + X13_Other_expenses__c</formula>
    <label>14. Total expenses:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>