force-app/main/default/objects/Registration__c/fields/X14_What_of_funds_has_been_spent_on__c.field-meta.xml
<CustomField>
    <fullName>X14_What_of_funds_has_been_spent_on__c</fullName>
    <formula>1- (Program__r.X25_C_Management_and_general_expenses__c / Program__r.X8_Contributions_and_Grants__c )</formula>
    <inlineHelpText>14. What % of funds has been spent on the charitable purpose?</inlineHelpText>
    <label>14. What % of funds has been spent on</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>