force-app/main/default/objects/Registration__c/fields/X15_Excess_Deficit_for_the_year__c.field-meta.xml
<CustomField>
    <fullName>X15_Excess_Deficit_for_the_year__c</fullName>
    <formula>X7_Total_revenue__c - X14_Total_expenses__c</formula>
    <label>15. Excess/Deficit for the year:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>