force-app/main/default/objects/Registration__c/fields/X16_A_1__c.field-meta.xml
<CustomField>
    <fullName>X16_A_1__c</fullName>
    <formula>Program__r.X1h_Total__c - Program__r.X1e_Government_Grants__c</formula>
    <inlineHelpText>16(A)1 Total amount of contributions received directly from the public</inlineHelpText>
    <label>16(A) 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>