force-app/main/default/objects/Registration__c/fields/X16_A_2__c.field-meta.xml
<CustomField>
    <fullName>X16_A_2__c</fullName>
    <formula>Program__r.X25_D_Fundraising_Expenses_Total__c</formula>
    <inlineHelpText>16(A)2 Total spent on fundraising, including contracts with PFRs:</inlineHelpText>
    <label>16(A)2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>