force-app/main/default/objects/Registration__c/fields/X16_A_3_Percent_of_fundraising_expenses__c.field-meta.xml
<CustomField>
    <fullName>X16_A_3_Percent_of_fundraising_expenses__c</fullName>
    <formula>X16_A_2__c / X16_A_1__c</formula>
    <label>16(A)3 Percent of fundraising expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>