force-app/main/default/objects/Registration__c/fields/X16_B_1__c.field-meta.xml
<CustomField>
    <fullName>X16_B_1__c</fullName>
    <formula>Program__r.X25_B_Program_Service_expenses__c</formula>
    <inlineHelpText>16(B)1 Total amount of expenses dedicated to providing charitable services:</inlineHelpText>
    <label>16(B)1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>