force-app/main/default/objects/Registration__c/fields/X16_B_2__c.field-meta.xml
<CustomField>
    <fullName>X16_B_2__c</fullName>
    <formula>Program__r.X25_A_Total_Expenses__c</formula>
    <inlineHelpText>16(B)2 Total amount of expenses of the organization</inlineHelpText>
    <label>16(B)2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>