force-app/main/default/objects/Registration__c/fields/X16_B__c.field-meta.xml
<CustomField>
    <fullName>X16_B__c</fullName>
    <formula>X16_B_1__c / X16_B_2__c</formula>
    <inlineHelpText>16(B) Percent of program services expenses:</inlineHelpText>
    <label>16(B)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>