force-app/main/default/objects/Registration__c/fields/X16_C_1__c.field-meta.xml
<CustomField>
    <fullName>X16_C_1__c</fullName>
    <formula>Program__r.X25_C_Management_and_general_expenses__c</formula>
    <inlineHelpText>16(C)1 Total amount of expenses dedicated to administrative costs</inlineHelpText>
    <label>16(C)1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>