force-app/main/default/objects/Registration__c/fields/X16_C_3_Percent_of_administrative_expens__c.field-meta.xml
<CustomField>
    <fullName>X16_C_3_Percent_of_administrative_expens__c</fullName>
    <formula>X16_C_1__c / X16_C_2__c</formula>
    <label>16(C)3 Percent of administrative expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>