force-app/main/default/objects/Registration__c/fields/X16_Net_assets_fund_balances_at_beginn__c.field-meta.xml
<CustomField>
    <fullName>X16_Net_assets_fund_balances_at_beginn__c</fullName>
    <formula>Program__r.Net_assets_or_fund_balances__c</formula>
    <label>16. Net assets / fund balances at beginn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>