force-app/main/default/objects/Registration__c/fields/X17_Other_changes_in_net_assets_or_fund__c.field-meta.xml
<CustomField>
    <fullName>X17_Other_changes_in_net_assets_or_fund__c</fullName>
    <formula>Program__r.X9_Other_change_in_net_assets_or_fund_ba__c</formula>
    <inlineHelpText>17. Other changes in net assets or fund balances:</inlineHelpText>
    <label>17. Other changes in net assets or fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>