force-app/main/default/objects/Registration__c/fields/X18_Net_assets_fund_balances__c.field-meta.xml
<CustomField>
    <fullName>X18_Net_assets_fund_balances__c</fullName>
    <formula>X15_Excess_Deficit_for_the_year__c + X16_Net_assets_fund_balances_at_beginn__c + X17_Other_changes_in_net_assets_or_fund__c</formula>
    <label>18. Net assets / fund balances:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>