force-app/main/default/objects/Registration__c/fields/X18_Total_dollar_amountt_received__c.field-meta.xml
<CustomField>
    <fullName>X18_Total_dollar_amountt_received__c</fullName>
    <formula>(Program__r.X1h_Total__c + Program__r.X8c_Net_income_or_loss_from_fundraising__c + Program__r.X9c_Net_income_or_loss_from_gaming__c + Program__r.X10c_Net_income_or_loss_from_sales__c )- Program__r.X1e_Government_Grants__c</formula>
    <inlineHelpText>18. Total dollar amount received as contributions:</inlineHelpText>
    <label>18. Total dollar amountt received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>