force-app/main/default/objects/Registration__c/fields/X19_Total_assets__c.field-meta.xml
<CustomField>
    <fullName>X19_Total_assets__c</fullName>
    <formula>Program__r.Total_Assets_End_Of_Year__c</formula>
    <label>19. Total assets:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>