force-app/main/default/objects/Registration__c/fields/X1_Beginning_Gross_Assets__c.field-meta.xml
<CustomField>
    <fullName>X1_Beginning_Gross_Assets__c</fullName>
    <formula>Program__r.Total_Assets_Beginning_Of_Year__c</formula>
    <label>1. Beginning Gross Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>