force-app/main/default/objects/Registration__c/fields/X1_Public_contributions__c.field-meta.xml
<CustomField>
    <fullName>X1_Public_contributions__c</fullName>
    <formula>Program__r.X1h_Total__c - Program__r.X1e_Government_Grants__c</formula>
    <label>1. Public contributions:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>