force-app/main/default/objects/Registration__c/fields/X1_Public_Support__c.field-meta.xml
<CustomField>
    <fullName>X1_Public_Support__c</fullName>
    <formula>Contribution__c</formula>
    <label>1. Public Support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>