force-app/main/default/objects/Registration__c/fields/X1st_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Due_Date__c</fullName>
    <label>1st Due Date</label>
    <type>Date</type>
</CustomField>