force-app/main/default/objects/Registration__c/fields/X1st_Ext_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Ext_Due_Date__c</fullName>
    <label>1st Ext. Due Date</label>
    <type>Date</type>
</CustomField>