force-app/main/default/objects/Registration__c/fields/X1st_Extension__c.field-meta.xml
<CustomField>
    <fullName>X1st_Extension__c</fullName>
    <label>1st Extension</label>
    <type>Date</type>
</CustomField>