force-app/main/default/objects/Registration__c/fields/X20_Total_liabilities__c.field-meta.xml
<CustomField>
    <fullName>X20_Total_liabilities__c</fullName>
    <formula>Program__r.Total_Liabilities_End_Of_Year__c</formula>
    <label>20. Total liabilities:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>