force-app/main/default/objects/Registration__c/fields/X21_Amount_paid_to_PFR_PS_FRC__c.field-meta.xml
<CustomField>
    <fullName>X21_Amount_paid_to_PFR_PS_FRC__c</fullName>
    <formula>Program__r.Line_11_e_Professional_Fundraising_Fees__c</formula>
    <label>21. Amount paid to PFR/PS/FRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>