force-app/main/default/objects/Registration__c/fields/X21_Net_assets_fund_balances__c.field-meta.xml
<CustomField>
    <fullName>X21_Net_assets_fund_balances__c</fullName>
    <formula>X19_Total_assets__c - X20_Total_liabilities__c</formula>
    <label>21. Net assets / fund balances:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>