force-app/main/default/objects/Registration__c/fields/X23_Amt_disbursed_for_prog_services__c.field-meta.xml
<CustomField>
    <fullName>X23_Amt_disbursed_for_prog_services__c</fullName>
    <formula>Program__r.X25_B_Program_Service_expenses__c</formula>
    <inlineHelpText>23. Amt disbursed for prog services outside WV:</inlineHelpText>
    <label>23. Amt disbursed for prog services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>