force-app/main/default/objects/Registration__c/fields/X25_Percentage__c.field-meta.xml
<CustomField>
    <fullName>X25_Percentage__c</fullName>
    <formula>Fundraising__c / Total_amount_of_funds_solicited_collecte__c</formula>
    <label>25. Percentage:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>