force-app/main/default/objects/Registration__c/fields/X2_Government_grants__c.field-meta.xml
<CustomField>
    <fullName>X2_Government_grants__c</fullName>
    <formula>Program__r.X1e_Government_Grants__c</formula>
    <label>2. Government grants:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>