force-app/main/default/objects/Registration__c/fields/X2_Gross_Dollar_Value_of_All_Contributio__c.field-meta.xml
<CustomField>
    <fullName>X2_Gross_Dollar_Value_of_All_Contributio__c</fullName>
    <formula>Program__r.X1h_Total__c + Program__r.X8a_Gross_income_from_fundraising_events__c + Program__r.X9a_Gross_income_from_gaming_activities__c + Program__r.X10a_Gross_sales_of_inventory__c</formula>
    <inlineHelpText>2. Gross Dollar Value of All Contributions from Solicitiations</inlineHelpText>
    <label>2.Gross Dollar Value of All Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>