force-app/main/default/objects/Registration__c/fields/X2_Other__c.field-meta.xml
<CustomField>
    <fullName>X2_Other__c</fullName>
    <formula>Program__r.X26_A_Total_Expenses__c -( Program__r.X26_B_Program_Service_expenses__c + Program__r.X26_C_Management_and_general_expenses__c + Program__r.X26_D_Fundraising_Expenses_Total__c )</formula>
    <label>2.Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>