force-app/main/default/objects/Registration__c/fields/X2_Other_Revenues__c.field-meta.xml
<CustomField>
    <fullName>X2_Other_Revenues__c</fullName>
    <formula>X3_Total_Revenue__c - X1_Public_Support__c</formula>
    <label>2. Other Revenues:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>