force-app/main/default/objects/Registration__c/fields/X2nd_Ext_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Ext_Due_Date__c</fullName>
    <label>2nd Ext. Due Date</label>
    <type>Date</type>
</CustomField>