force-app/main/default/objects/Registration__c/fields/X3_Gross_Dollar_Value_of_Revenue_from__c.field-meta.xml
<CustomField>
    <fullName>X3_Gross_Dollar_Value_of_Revenue_from__c</fullName>
    <formula>Program__r.X2g_Total__c + Program__r.X3_Investment_Income__c + Program__r.X4_Income_from_investment_of_tax_exempt__c + Program__r.X5_Royalties__c + Program__r.X6d_Net_rental_income_or_loss__c + Program__r.X7d_Net_gain_or_loss__c + Program__r.X11e_Total__c</formula>
    <inlineHelpText>3. Gross Dollar Value of Revenue from All Other Sources</inlineHelpText>
    <label>3. Gross Dollar Value of Revenue from</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>