force-app/main/default/objects/Registration__c/fields/X3_Program_service_revenue__c.field-meta.xml
<CustomField>
    <fullName>X3_Program_service_revenue__c</fullName>
    <formula>Program__r.X2g_Total__c</formula>
    <label>3. Program service revenue:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>