force-app/main/default/objects/Registration__c/fields/X3_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X3_Total_Revenue__c</fullName>
    <formula>Program__r.X12_1_Total_Revenue__c</formula>
    <label>3. Total Revenue:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>