force-app/main/default/objects/Registration__c/fields/X4_Special_events_and_activities__c.field-meta.xml
<CustomField>
    <fullName>X4_Special_events_and_activities__c</fullName>
    <formula>Program__r.X8a_Gross_income_from_fundraising_events__c</formula>
    <label>4. Special events and activities:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>