force-app/main/default/objects/Registration__c/fields/X4_Total_Dollar_Value_of_Gross_Receipts__c.field-meta.xml
<CustomField>
    <fullName>X4_Total_Dollar_Value_of_Gross_Receipts__c</fullName>
    <formula>X2_Gross_Dollar_Value_of_All_Contributio__c + X3_Gross_Dollar_Value_of_Revenue_from__c</formula>
    <label>4. Total Dollar Value of Gross Receipts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>