force-app/main/default/objects/Registration__c/fields/X5_Excess_or_Deficit__c.field-meta.xml
<CustomField>
    <fullName>X5_Excess_or_Deficit__c</fullName>
    <formula>X3_Total_Revenue__c - Total_Expenses__c</formula>
    <label>5. Excess or Deficit:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>