force-app/main/default/objects/Registration__c/fields/X5_Gross_Dollar_Value_of_Expenditures__c.field-meta.xml
<CustomField>
    <fullName>X5_Gross_Dollar_Value_of_Expenditures__c</fullName>
    <formula>Program__r.X25_B_Program_Service_expenses__c</formula>
    <inlineHelpText>5. Gross Dollar Value of Expenditures for Program Services</inlineHelpText>
    <label>5. Gross Dollar Value of Expenditures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>