force-app/main/default/objects/Registration__c/fields/X5_Gross_sales_of_inventory__c.field-meta.xml
<CustomField>
    <fullName>X5_Gross_sales_of_inventory__c</fullName>
    <formula>Program__r.X10a_Gross_sales_of_inventory__c</formula>
    <label>5. Gross sales of inventory:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>