force-app/main/default/objects/Registration__c/fields/X6_Other_revenue__c.field-meta.xml
<CustomField>
    <fullName>X6_Other_revenue__c</fullName>
    <formula>Program__r.X3_Investment_Income__c + Program__r.X4_Income_from_investment_of_tax_exempt__c + Program__r.X5_Royalties__c + Program__r.X6a_Gross_Rents__c + Program__r.X7d_Net_gain_or_loss__c + Program__r.X9a_Gross_income_from_gaming_activities__c + Program__r.X11e_Total__c</formula>
    <label>6. Other revenue:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>