force-app/main/default/objects/Registration__c/fields/X7_Total_revenue__c.field-meta.xml
<CustomField>
    <fullName>X7_Total_revenue__c</fullName>
    <formula>X1_Public_contributions__c + X2_Government_grants__c + X3_Program_service_revenue__c + X4_Special_events_and_activities__c + X5_Gross_sales_of_inventory__c + X6_Other_revenue__c</formula>
    <label>7. Total revenue:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>