force-app/main/default/objects/Registration__c/fields/X8_Net_Worth_at_End_of_Year__c.field-meta.xml
<CustomField>
    <fullName>X8_Net_Worth_at_End_of_Year__c</fullName>
    <formula>X5_Excess_or_Deficit__c + Beginning_of_Year_Net_Assets__c + Other_changes_in_net_assets_fund_balance__c</formula>
    <label>8. Net Worth at End of Year:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>