force-app/main/default/objects/Registration__c/fields/X8_Total_program_expenses__c.field-meta.xml
<CustomField>
    <fullName>X8_Total_program_expenses__c</fullName>
    <formula>Program__r.X25_B_Program_Service_expenses__c</formula>
    <label>8. Total program expenses:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>