force-app/main/default/objects/Registration__c/fields/X9_Direct_expenses_from_special_events__c.field-meta.xml
<CustomField>
    <fullName>X9_Direct_expenses_from_special_events__c</fullName>
    <formula>Program__r.X8b_Less_direct_expense_from_fundraisin__c</formula>
    <label>9. Direct expenses from special events:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>