force-app/main/default/objects/Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>X1st_Due_Date__c</columns>
    <columns>X1st_Ext_Due_Date__c</columns>
    <columns>X2nd_Ext_Due_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Registration_Health__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>