force-app/main/default/objects/Registration__c/listViews/Completed_Registrations.listView-meta.xml
<ListView>
    <fullName>Completed_Registrations</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Status__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending,Hold for Reg. Acceptance</value>
    </filters>
    <filters>
        <field>Client__c</field>
        <operation>contains</operation>
        <value>VN Pharma</value>
    </filters>
    <label>Pending Registrations</label>
</ListView>